# rust-curses

./: Cargo.toml
examples/: hello-world.rs  input.rs
src/: attribute.rs  border.rs  character.rs  color.rs  cursor.rs  error.rs  event.rs  key.rs  lib.rs  mouse.rs  panel.rs  scroll.rs  symbol.rs  util.rs  width.rs  window.rs
src/screen/: add.rs  attributes.rs  capabilities.rs  clear.rs  colors.rs  input.rs  line.rs  mod.rs  panels.rs  screen.rs  settings.rs  suspended.rs  windows.rs
src/window/: add.rs  attributes.rs  capabilities.rs  colors.rs  input.rs  mod.rs  window.rs
